syntax = "proto3";

package inner.grpc.services;

import "google/protobuf/empty.proto";
import "inner/params/cf_gdc_da.proto";
import "inner/params/dc_ida.proto";

option go_package = "go-device-controller/types/protocol/generated/proto/inner/grpc/services";
option java_package = "com.dogu.protocol.generated.inner.grpc.services";

service IosDeviceAgentService {
  rpc Relay(stream params.CfGdcDaParamList)
      returns (stream params.CfGdcDaResultList);
  rpc CheckHealth(google.protobuf.Empty) returns (google.protobuf.Empty);
  rpc Call(params.DcIdaParam) returns (params.DcIdaResult);
}
